--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -1,88 +1,138 @@
 {
   "title": "مثال بسيط",
-  "subtitle": "إنها صفحة فارغة. ابدأ في إنشاء صفحتك من هنا.",
+  "subtitle": "إنها صفحة فارغة. ابدأ في إنشاء صفحتك الإلكترونية من هنا.",
   "error_with_status": "حدث خطأ على الخادم",
   "404": "تعذر العثور على هذه الصفحة.",
   "404_subtitle": "يمكنك إما البقاء والاسترخاء هنا ، أو العودة إلى البداية.",
   "back": "العودة إلى المنزل",
   "error_without_status": "حدث خطأ على الخادم",
-  "contact_title": "مشروع مجاني اقتباس",
-  "contact_title2": "قل مرحبا لنا",
-  "contact_subtitle": "هل لديك أي أسئلة؟ هل أنت مستعد لخفض التكلفة وتحقيق إيرادات جديدة؟ أو هل تريد فقط أن تقول مرحبا؟ أرسل لنا رسالة.",
-  "form_name": "ما اسمك؟ *",
-  "form_email": "ما هو بريدك الإلكتروني؟ *",
-  "form_phone": "ما هو رقم هاتفك؟",
-  "form_company": "ما هي شركتك؟",
-  "form_message": "اكتب رسالتك هنا",
-  "form_terms": "لقد قرأت ووافقت على شروط",
-  "form_privacy": "سياسة الخدمة والخصوصية *",
-  "form_send": "إرسال رسالة",
-  "login": "تسجيل الدخول",
-  "login_lcreate": "إنشاء حساب جديد",
-  "login_or": "أو تسجيل الدخول عبر البريد الإلكتروني",
-  "login_email": "البريد الإلكتروني",
-  "login_password": "كلمه السر",
-  "login_remember": "تذكر",
-  "login_forgot": "نسيت كلمة المرور",
-  "continue": "استمر",
-  "login_title": "مرحبًا بك مرة أخرى",
-  "login_subtitle": "الرجاء تسجيل الدخول للمتابعة",
-  "register": "تسجيل",
-  "register_already": "هل لديك حساب بالفعل؟",
-  "register_or": "أو التسجيل باستخدام البريد الإلكتروني",
-  "register_name": "الاسم؟ *",
-  "register_email": "البريد الإلكتروني؟ *",
-  "register_password": "كلمه السر",
-  "register_confirm": "تأكيد كلمة المرور",
-  "register_title": "تشرفت بمعرفتك :)",
-  "register_subtitle": "فقط سجل للانضمام إلينا",
-  "accept": "قبول",
-  "en": "English",
-  "de": "Deutsch",
+  "accept": "تقبل",
+  "en": "الإنكليزية",
+  "es": "الإسبانية",
+  "de": "الماني",
   "zh": "简体中文",
-  "pt": "󠁥󠁮󠁧󠁿Português",
-  "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
+  "pt": "البرتغاليون",
+  "id": "البهاسا إندونيسيا",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
-  "notif_msg": "هذا مثال لرسالة شائعة الاستخدام للحصول على معلومات مهمة للزوار أو المستخدمين. الرجاء النقر فوق الزر بجانب إغلاق هذه الرسالة.",
-  "saas-landing": {
-    "header_login": "تسجيل الدخول",
-    "header_register": "تسجيل",
-    "header_language": "لغة",
-    "header_theme": "وضع السمة",
-    "header_dark": "داكن",
-    "header_light": "ضوء",
-    "header_feature": "خاصية",
-    "header_testimonials": "شهادات",
-    "header_pricing": "التسعير والخطة",
-    "header_faq": "أسئلة وأجوبة المتداولة",
-    "header_contact": "اتصل",
-    "banner_title": "شركة مذهلة تستحق",
-    "banner_titlestrong": "برنامج مدهش",
-    "banner_subtitle": "ملايين من المستخدمين السعداء يعملون بشكل أفضل مع تطبيقاتنا المدمجة.",
-    "banner_watchvideo": "شاهد الفيديو",
-    "getstarted": "البدء",
-    "counter_month": "شهر",
-    "counter_free": "تجربة مجانية",
-    "counter_users": "المستخدمون النشطون",
-    "counter_providers": "مقدمي",
-    "feature_title1": "تصرف وفقًا للكل",
-    "feature_titlestrong1": "في لوحة معلومات واحدة",
-    "feature_desc1": "تعرض لك لوحة تحكم جمهورنا شرائح تم إنشاؤها مسبقًا مثل أفضل المواقع ، ومصادر النمو الحديثة ، وحتى قيمة حياة العميل (CLV).",
-    "see_detail": "انظر التفاصيل",
-    "feature_title2": "كل ما تحتاجه هو",
-    "feature_titlestrong2": "اقتراح قيمة فريدة",
-    "feature_desc2": "بفضل الأسس التقنية القوية ، سمحت لنا بالاستفادة من خبراء الأعمال لإنشاء مئات التحسينات.",
-    "feature_title3": "التعجيل بالذكاء",
-    "feature_titlestrong3": "مشروع",
-    "feature_desc3": "نحن نمكِّن فرق التسويق والمبيعات والخدمات لديك من التعاون عبر دورة حياة العميل بأكملها للحصول على تجارب أكثر وضوحًا وتنسى.",
-    "testi_title": "ما عملاؤنا",
-    "testi_titlestrong": "شهادة",
-    "pricing_title": "التسعير والخطة",
-    "pricing_subtitle": "أفضل قيمة مصممة لمكان عملك ، تبدأ من 24 دولارًا فقط لكل مستخدم / شهر.",
-    "faq_subtitle": "هل لديك سؤال؟ راجع الأسئلة الشائعة للعثور على إجابتك.",
-    "caption_news": "أخبار",
-    "caption_event": "حدث",
-    "news_readmore": "اقرأ المزيد",
-    "footer_waiting": "ماذا تنتظر؟"
-  }
+  "notif_msg": "نحن نستخدم ملفات تعريف الارتباط لجعل موقعنا يعمل. بموافقتك، نستخدم ملفات تعريف الارتباط لتحسين تجربة المستخدم وتحليل حركة مرور موقع الويب. بالنقر فوق \"قبول\" ، فإنك توافق على استخدام موقعنا لملفات تعريف الارتباط.",
+  "header_language": "اللغة",
+  "header_theme": "وضع السمة",
+  "header_dark": "داكن",
+  "header_light": "ضوء",
+  "header_feature": "ملامح",
+  "header_testimonials": "شهادات",
+  "header_pricing": "التسعير",
+  "header_faq": "الأسئلة المتداولة",
+  "header_contact": "الاتصال",
+  "banner_title": "بناء لوحات AAC بقوة الذكاء الاصطناعي",
+  "banner_titlestrong": "",
+  "banner_subtitle": "مصممة للمعالجين والمعلمين ومقدمي الرعاية. قم بإنشاء لوحات اتصال معززة مخصصة على الفور باستخدام Cboard الذكاء الاصطناعي Builder.",
+  "banner_watchvideo": "شاهد الفيديو",
+  "getstarted": "ابدأ الآن",
+  "counter_credits": "الائتمانات",
+  "counter_free": "تجربة مجانية",
+  "counter_users": "رموز AAC",
+  "counter_providers": "اللغات",
+  "counter_transactions": "المعاملات",
+  "feature_title1": "لوحات المفردات الأساسية الفورية",
+  "feature_titlestrong1": "مع الذكاء الاصطناعي",
+  "feature_desc1": "قم بإنشاء لوحات AAC الأساسية بسرعة باستخدام مفردات أساسية عالية التردد مصممة خصيصا لتلبية احتياجات كل مستخدم. وفر الوقت وادعم اتصالات أكثر فعالية من البداية.",
+  "see_detail": "انظر التفاصيل",
+  "feature_title2": "الصور التوضيحية التي تم إنشاؤها بواسطة الذكاء الاصطناعي",
+  "feature_titlestrong2": "لكل مفهوم",
+  "feature_desc2": "هل تفتقد رمزا؟ لا توجد مشكلة. يقوم الذكاء الاصطناعي الخاص بنا بإنشاء صور توضيحية مخصصة عند عدم توفر الصور الحالية ، مما يضمن الدعم المرئي الكامل لكل كلمة أو عبارة.",
+  "feature_title3": "تصدير مباشرة إلى",
+  "feature_titlestrong3": "تطبيق Cboard",
+  "feature_desc3": "انتقل من إنشاء اللوحة إلى الاتصال بنقرة واحدة. قم بتصدير لوحات AAC المخصصة على الفور إلى تطبيق Cboard مع التوافق الكامل وبدون إعداد إضافي.",
+  "testi_title": "شهادات من مستخدمينا",
+  "testi_titlestrong": "",
+  "testi1": "لقد غيرت هذه الأداة تماما كيفية بناء لوحات AAC. ما كان يستغرق لي ساعات يستغرق الآن دقائق - والنتائج أكثر تخصيصا.",
+  "testi1Name": "الدكتورة إيلينا رويز",
+  "testi1Title": "أخصائي أمراض النطق واللغة ، مركز إعادة تأهيل الأطفال",
+  "testi2": "الصور التوضيحية التي تم إنشاؤها بواسطة الذكاء الاصطناعي تغير قواعد اللعبة. لا مزيد من الحلول البديلة أو الصور المفقودة - لدينا دائما ما نحتاجه بالضبط.",
+  "testi2Name": "مارك جنسن",
+  "testi2Title": "أخصائي التكنولوجيا المساعدة ، منطقة مدارس أوك فالي",
+  "testi3": "بصفتي معلما خاصا ، أقوم بإنشاء لوحات متعددة في الأسبوع. لقد خفض Cboard الذكاء الاصطناعي Builder وقت التحضير إلى النصف دون التضحية بالجودة.",
+  "testi3Name": "ليزا تشين",
+  "testi3Title": "مدرس التربية الخاصة ، مدرسة مابل جروف الابتدائية",
+  "testi4": "أحب التكامل مع تطبيق Cboard - إنه سلس. يمكنني إنشاء اللوحات ونشرها في سير عمل واحد سلس.",
+  "testi4Name": "كارلوس ألفاريز",
+  "testi4Title": "معالج النطق ، عيادة الأصوات الشاملة",
+  "testi5": "أخيرا ، أداة AAC تضع الذكاء الاصطناعي القوي في أيدي المعلمين والمعالجين. إنه بديهي وفعال ومدروس بعمق.",
+  "testi5Name": "أنجيلا طومسون",
+  "testi5Title": "مدير الاتصال المساعد ، مؤسسة برايت هورايزونز",
+  "testi6": "إن القدرة على إنشاء لوحات المفردات الأساسية بهذه السرعة كان لها تأثير كبير على عبء القضايا. إنها أداة رائعة.",
+  "testi6Name": "بريا مينون",
+  "testi6Title": "SLP ، خدمات التدخل المبكر",
+  "testi7": "تجربة المستخدم مذهلة - بسيطة بما يكفي ليستخدمها أي شخص ، ولكنها قوية تحت الغطاء. ابتكار حقيقي في تقنية AAC.",
+  "testi7Name": "جوردان لي",
+  "testi7Title": "مستشار تكنولوجيا التعليم ومحامي AAC",
+  "testi8": "أعمل في بيئات منخفضة الموارد ، وتساعدني أداة الذكاء الاصطناعي هذه في توفير لوحات AAC عالية الجودة دون الحاجة إلى فريق كبير أو ميزانية.",
+  "testi8Name": "نادية غارسيا",
+  "testi8Title": "معلم ذوي الاحتياجات الخاصة، Fundación Conectar",
+  "testi9": "فتح إنشاء رسم تخطيطي مخصص إمكانيات جديدة للأطفال الذين يعانون من حالات نادرة أو احتياجات مفردات محددة للغاية.",
+  "testi9Name": "بنيامين ووكر",
+  "testi9Title": "أخصائي أمراض النطق ، مركز التنوع العصبي",
+  "testi10": "سرعة ومرونة هذه الأداة لا مثيل لها. أوصي به الآن لكل معالج أدربه.",
+  "testi10Name": "الدكتورة إيزابيل فورنييه",
+  "testi10Title": "مدرب AAC والمشرف السريري ، معهد VoicePath",
+  "pricing_title": "خطط التسعير",
+  "pricing_subtitle": "أفضل قيمة مصممة لمكان عملك ، بدءا من 10 دولارات فقط لكل مستخدم / شهر.",
+  "pricing_free_title": "تجربة مجانية",
+  "pricing_free_desc": "جرب Cbuilder بدون التزام",
+  "pricing_free_feature1": "40 ساعة معتمدة متضمنة (≈4 لوحات)",
+  "pricing_free_feature2": "لوحات مفردات الذكاء الاصطناعي الأساسية",
+  "pricing_free_feature3": "الصور التوضيحية التي تم إنشاؤها بواسطة الذكاء الاصطناعي",
+  "pricing_free_feature4": "التصدير اليدوي لللوحات",
+  "pricing_free_feature5": "لا حاجة لبطاقة ائتمان",
+  "pricing_basic_title": "أساسي",
+  "pricing_basic_desc": "للأفراد الذين يبدأون",
+  "pricing_basic_feature1": "150 ساعة معتمدة شهرية (≈15 لوحة)",
+  "pricing_basic_feature2": "لوحات مفردات الذكاء الاصطناعي الأساسية",
+  "pricing_basic_feature3": "الصور التوضيحية التي تم إنشاؤها بواسطة الذكاء الاصطناعي",
+  "pricing_basic_feature4": "التصدير اليدوي لللوحات",
+  "pricing_basic_feature5": "دعم البريد الإلكتروني",
+  "pricing_standard_title": "قياسي + سبورد",
+  "pricing_standard_desc": "للمهنيين الذين يحتاجون إلى الاندماج والدعم",
+  "pricing_standard_feature1": "300 رصيد شهري (≈30 لوحة)",
+  "pricing_standard_feature2": "Premium Cboard App Access (بقيمة 8 دولارات)",
+  "pricing_standard_feature3": "جميع الميزات الأساسية",
+  "pricing_standard_feature4": "تصدير سلس إلى السبورة",
+  "pricing_standard_feature5": "الدعم ذو الأولوية",
+  "pricing_pro_title": "برو + سبورد",
+  "pricing_pro_desc": "للمستخدمين والفرق ذات الحجم الكبير",
+  "pricing_pro_feature1": "600 رصيد شهري (≈60 لوحة)",
+  "pricing_pro_feature2": "جميع الميزات القياسية",
+  "pricing_pro_feature3": "أدوات تعاون الفريق",
+  "pricing_pro_feature4": "الوصول المبكر إلى الميزات الجديدة",
+  "pricing_pro_feature5": "أرصدة إضافية مخفضة",
+  "faq_subtitle": "هل لديك سؤال؟ تحقق من أسئلتنا المتداولة للعثور على إجابتك.",
+  "faq_question_01": "ما هو Cbuilder وكيف يعمل؟",
+  "faq_answer_01": "Cbuilder هي أداة تعمل بالطاقة الذكاء الاصطناعي تساعد في إنشاء لوحات اتصالات AAC. يمكنك ببساطة إدخال أبعاد اللوحة ووصف الغرض منها ، وتقوم الأداة بإنشاء مفردات وصور توضيحية ذات صلة باستخدام نماذج اللغة والصور المتقدمة.",
+  "faq_question_02": "كم عدد الاعتمادات اللازمة لإنشاء لوحة؟",
+  "faq_answer_02": "يستهلك كل مجلس عادة حوالي 10 اعتمادات. تتضمن خطتك الشهرية عددا محددا من الأرصدة ، ويمكنك شراء أرصدة إضافية إذا لزم الأمر.",
+  "faq_question_03": "ماذا يحدث إذا لم يكن الرسم التخطيطي موجودا في قاعدة البيانات؟",
+  "faq_answer_03": "لا مشكلة - يستخدم Cbuilder الذكاء الاصطناعي لإنشاء صور توضيحية مخصصة عندما لا يتم العثور على صورة مناسبة في قاعدة البيانات الحالية ، لذلك لن تترك أبدا بدون رمز مرئي.",
+  "faq_question_04": "هل يمكنني تصدير اللوحات إلى تطبيق Cboard؟",
+  "faq_answer_04": "نعم! إذا كنت تستخدم الخطة القياسية أو الاحترافية ، فيمكنك تصدير لوحاتك بسلاسة مباشرة إلى الإصدار المتميز من تطبيق Cboard للاستخدام الفوري.",
+  "faq_question_05": "هل هناك نسخة تجريبية مجانية متاحة؟",
+  "faq_answer_05": "نعم ، نحن نقدم إصدارا تجريبيا مجانيا يمنحك 40 رصيدا - وهو ما يكفي لإنشاء 4 لوحات كاملة. لا توجد بطاقة ائتمان مطلوبة للبدء.",
+  "caption_news": "خبر",
+  "caption_event": "حدث",
+  "news_readmore": "اقرأ أكثر",
+  "footer_waiting": "ما الذي تنتظره؟",
+  "title_home": "وطن",
+  "title_blog": "المدونة",
+  "title_contact": "الاتصال",
+  "title_history": "تاريخ",
+  "title_privacy": "سياسة الخصوصية",
+  "title_locations": "مواقع",
+  "title_team": "فريق",
+  "title_pricing": "التسعير",
+  "title_terms": "شروط الخدمة",
+  "title_faq": "الأسئلة المتداولة",
+  "title_help": "تعليمات",
+  "footer_company": "شركة",
+  "footer_resources": "موارد",
+  "footer_legal": "قانوني"
 }
