--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -1,88 +1,138 @@
 {
   "title": "Ein einfaches Beispiel",
-  "subtitle": "Es ist eine leere Seite. Baue deine Seite mit here auf",
-  "error_with_status": "Auf dem Server ist ein Fehler aufgetreten",
+  "subtitle": "Es ist ein leeres Blatt. Beginnen Sie von hier aus mit dem Aufbau Ihrer Seite.",
+  "error_with_status": "Auf dem Server ist ein Fehler aufgetreten.",
   "404": "Diese Seite konnte nicht gefunden werden.",
-  "404_subtitle": "Sie können entweder hier bleiben und entspannen oder zum Anfang zurückkehren.",
-  "zurück": "zurück nach Hause",
+  "404_subtitle": "Hier können Sie entweder verweilen und chillen, oder zu den Anfängen zurückkehren.",
+  "back": "Zurück zur Startseite",
   "error_without_status": "Auf dem Server ist ein Fehler aufgetreten",
-  "contact_title": "Kostenloses Projektangebot",
-  "contact_title2": "Sag Hallo zu uns",
-  "contact_subtitle": "Haben Sie Fragen? Sind Sie bereit, Kosten zu senken und neue Einnahmen zu generieren? Oder möchten Sie einfach nur Hallo sagen? Schreiben Sie uns eine Nachricht.",
-  "form_name": "Wie ist Ihr Name? *",
-  "form_email": "Wie lautet Ihre E-Mail-Adresse? *",
-  "form_phone": "Wie lautet Ihre Telefonnummer?",
-  "form_company": "Was ist Ihre Firma?",
-  "form_message": "Geben Sie hier Ihre Nachricht ein",
-  "form_terms": "Ich habe die AGB von gelesen und akzeptiere sie.",
-  "form_privacy": "Service & Datenschutz *",
-  "form_send": "Nachricht senden",
-  "login": "Einloggen",
-  "login_create": "Neues Konto erstellen",
-  "login_or": "Oder mit E-Mail einloggen",
-  "login_email": "Email",
-  "login_password": "Passwort",
-  "login_remember": "Merken",
-  "login_forgot": "Passwort vergessen",
-  "continue": "Weiter",
-  "login_title": "Willkommen zurück",
-  "login_subtitle": "Bitte einloggen um fortzufahren",
-  "register": "Register",
-  "register_already": "Haben Sie schon ein Konto?",
-  "register_or": "Oder registriere dich per E-Mail",
-  "register_name": "Name? *",
-  "register_email": "Email? *",
-  "register_password": "Passwort",
-  "register_confirm": "Passwort bestätigen",
-  "register_title": "Schön dich zu treffen :)",
-  "register_subtitle": "Einfach registrieren, um bei uns mitzumachen",
-  "accept": "Accept",
-  "en": "English",
+  "accept": "Annehmen",
+  "en": "Englisch",
+  "es": "Spanisch",
   "de": "Deutsch",
   "zh": "简体中文",
-  "pt": "󠁥󠁮󠁧󠁿Português",
-  "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
+  "pt": "Português",
+  "id": "Bahasa Indonesien",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
-  "notif_msg": "Dies ist ein Beispiel für eine Nachricht, die häufig für wichtige Informationen für Besucher oder Benutzer verwendet wird. Bitte klicken Sie auf die Schaltfläche neben, um diese Nachricht zu schließen.",
-  "saas-landing": {
-    "header_login": "einloggen",
-    "header_register": "registrieren",
-    "header_language": "Sprache",
-    "header_theme": "Themenmodus",
-    "header_dark": "dunkel",
-    "header_light": "Licht",
-    "header_feature": "Feature",
-    "header_testimonials": "Referenzen",
-    "header_pricing": "Preise und Plan",
-    "header_faq": "faq",
-    "header_contact": "Kontakt",
-    "banner_title": "Erstaunliches Unternehmen verdient",
-    "banner_titlestrong": "erstaunliche Software",
-    "banner_subtitle": "Millionen von zufriedenen Nutzern arbeiten besser mit unseren integrierten Apps.",
-    "banner_watchvideo": "Video ansehen",
-    "getstarted": "Loslegen",
-    "counter_month": "Monat",
-    "counter_free": "Kostenlose Testversion",
-    "counter_users": "Aktive Benutzer",
-    "counter_providers": "Anbieter",
-    "feature_title1": "Auf alles einwirken",
-    "feature_titlestrong1": "in einem Dashboard",
-    "feature_desc1": "Unser Zielgruppen-Dashboard zeigt Ihnen vorgefertigte Segmente wie Top-Standorte, aktuelle Wachstumsquellen und sogar den Customer Lifetime Value (CLV).",
-    "see_detail": "Siehe Detail",
-    "feature_title2": "Alles was du brauchst ist ein",
-    "feature_titlestrong2": "einzigartiges Wertversprechen",
-    "feature_desc2": "Mit seiner soliden technischen Basis konnten wir Geschäftsexperten für Hunderte von Verbesserungen einsetzen.",
-    "feature_title3": "Beschleunigen auf Intelligent",
-    "feature_titlestrong3": "Enterprise",
-    "feature_desc3": "Wir befähigen Ihre Marketing-, Vertriebs- und Serviceteams, über den gesamten Kundenlebenszyklus hinweg zusammenzuarbeiten, um aussagekräftigere und unvergesslichere Erfahrungen zu erzielen.",
-    "testi_title": "Was unsere Kunden",
-    "testi_titlestrong": "Zeugnis",
-    "pricing_title": "Preise und Plan",
-    "pricing_subtitle": "Das beste Preis-Leistungs-Verhältnis für Ihren Arbeitsplatz ab nur 24 US-Dollar pro Benutzer und Monat.",
-    "faq_subtitle": "Haben Sie eine Frage? In unseren häufig gestellten Fragen finden Sie Ihre Antwort.",
-    "caption_news": "Nachrichten",
-    "caption_event": "Veranstaltung",
-    "news_readmore": "Weiterlesen",
-    "footer_waiting": "Worauf warten Sie noch?"
-  }
+  "notif_msg": "Wir verwenden Cookies, damit unsere Website funktioniert. Mit Ihrer Zustimmung verwenden wir Cookies, um die Benutzererfahrung zu verbessern und den Website-Verkehr zu analysieren. Indem Sie auf \"Akzeptieren\" klicken, stimmen Sie der Verwendung von Cookies auf unserer Website zu.",
+  "header_language": "Sprache",
+  "header_theme": "Theme-Modus",
+  "header_dark": "dunkel",
+  "header_light": "Licht",
+  "header_feature": "Funktionen",
+  "header_testimonials": "empfehlungsschreiben",
+  "header_pricing": "Auszeichnung",
+  "header_faq": "Häufig gestellte Fragen",
+  "header_contact": "Kontakt",
+  "banner_title": "Erstellen Sie AAC-Boards mit der Kraft der KI",
+  "banner_titlestrong": "",
+  "banner_subtitle": "Entwickelt für Therapeuten, Pädagogen und Pflegekräfte. Generieren Sie sofort personalisierte augmentative Kommunikationsboards mit Cboard AI Builder.",
+  "banner_watchvideo": "Video ansehen",
+  "getstarted": "Loslegen",
+  "counter_credits": "Kredite",
+  "counter_free": "Kostenlose Testversion",
+  "counter_users": "AAC-Symbole",
+  "counter_providers": "Sprachen",
+  "counter_transactions": "Transaktionen",
+  "feature_title1": "Sofortige Kern-Vokabelbretter",
+  "feature_titlestrong1": "mit KI",
+  "feature_desc1": "Generieren Sie schnell AAC-Kernplatinen mit wesentlichem, hochfrequentem Vokabular, das auf die Bedürfnisse jedes Benutzers zugeschnitten ist. Sparen Sie Zeit und unterstützen Sie eine effektivere Kommunikation von Anfang an.",
+  "see_detail": "Im Detail sehen",
+  "feature_title2": "KI-generierte Piktogramme",
+  "feature_titlestrong2": "für jedes Konzept",
+  "feature_desc2": "Fehlt ein Symbol? Kein Problem. Unsere KI erstellt benutzerdefinierte Piktogramme, wenn vorhandene Bilder nicht verfügbar sind, und gewährleistet so eine vollständige visuelle Unterstützung für jedes Wort oder jeden Satz.",
+  "feature_title3": "Exportieren Sie direkt in den",
+  "feature_titlestrong3": "Cboard App",
+  "feature_desc3": "Wechseln Sie mit einem Klick von der Erstellung des Boards zur Kommunikation. Exportieren Sie Ihre benutzerdefinierten AAC-Boards sofort in die Cboard-Anwendung mit voller Kompatibilität und ohne zusätzliche Einrichtung.",
+  "testi_title": "Erfahrungsberichte unserer Nutzer",
+  "testi_titlestrong": "",
+  "testi1": "Dieses Tool hat die Art und Weise, wie ich AAC-Platinen baue, komplett verändert. Was früher Stunden gekostet hat, dauert jetzt Minuten – und die Ergebnisse sind noch individueller.",
+  "testi1Name": "Dr. Elena Ruiz",
+  "testi1Title": "Logopädin, Kinderrehabilitationszentrum",
+  "testi2": "Die KI-generierten Piktogramme sind ein Game Changer. Keine Workarounds oder fehlenden Bilder mehr – wir haben immer genau das, was wir brauchen.",
+  "testi2Name": "Mark Jensen",
+  "testi2Title": "Spezialist für assistive Technologien, Schulbezirk Oak Valley",
+  "testi3": "Als Sonderpädagogin erstelle ich mehrere Boards pro Woche. Cboard AI Builder hat meine Vorbereitungszeit halbiert, ohne die Qualität zu beeinträchtigen.",
+  "testi3Name": "Lisa Chen",
+  "testi3Title": "Sonderschullehrerin, Maple Grove Grundschule",
+  "testi4": "Ich liebe die Integration mit der Cboard-App – sie ist nahtlos. Ich kann Boards in einem reibungslosen Workflow erstellen und bereitstellen.",
+  "testi4Name": "Carlos Alvarez",
+  "testi4Title": "Logopädin, Inclusive Voices Clinic",
+  "testi5": "Endlich ein AAC-Tool, das Pädagogen und Therapeuten eine leistungsstarke KI in die Hand gibt. Es ist intuitiv, effizient und zutiefst durchdacht.",
+  "testi5Name": "Angela Thompson",
+  "testi5Title": "Direktor für assistive Kommunikation, Bright Horizons Foundation",
+  "testi6": "Die Möglichkeit, so schnell Boards mit Kernvokabular zu erstellen, hat einen großen Einfluss auf meine Fallzahl. Es ist ein brillantes Werkzeug.",
+  "testi6Name": "Priya Menon",
+  "testi6Title": "SLP, Frühinterventionsdienste",
+  "testi7": "Die Benutzererfahrung ist erstaunlich – einfach genug, dass jeder sie verwenden kann, aber leistungsstark unter der Haube. Eine echte Innovation in der AAC-Technologie.",
+  "testi7Name": "Jordan Lee",
+  "testi7Title": "EdTech-Berater und AAC-Fürsprecher",
+  "testi8": "Ich arbeite in ressourcenarmen Umgebungen, und dieses KI-Tool hilft mir, hochwertige AAC-Boards bereitzustellen, ohne ein großes Team oder Budget zu benötigen.",
+  "testi8Name": "Nadia García",
+  "testi8Title": "Sonderpädagogin, Fundación Conectar",
+  "testi9": "Die Erstellung von benutzerdefinierten Piktogrammen hat neue Möglichkeiten für Kinder mit seltenen Erkrankungen oder sehr spezifischen Wortschatzbedürfnissen eröffnet.",
+  "testi9Name": "Benjamin Walker",
+  "testi9Title": "Logopädin, Neurodiversitätszentrum",
+  "testi10": "Die Geschwindigkeit und Flexibilität dieses Tools sind unübertroffen. Ich empfehle es jetzt jedem Therapeuten, den ich ausbilde.",
+  "testi10Name": "Dr. Isabelle Fournier",
+  "testi10Title": "AAC-Trainerin und klinische Supervisorin, VoicePath Institute",
+  "pricing_title": "Preispläne",
+  "pricing_subtitle": "Das beste Preis-Leistungs-Verhältnis für Ihren Arbeitsplatz, ab nur 10 $/Benutzer/Monat.",
+  "pricing_free_title": "Kostenlose Testversion",
+  "pricing_free_desc": "Testen Sie Cbuilder unverbindlich",
+  "pricing_free_feature1": "40 Credits inklusive (≈4 Boards)",
+  "pricing_free_feature2": "KI-Kern-Vokabelbretter",
+  "pricing_free_feature3": "KI-generierte Piktogramme",
+  "pricing_free_feature4": "Manueller Export von Platinen",
+  "pricing_free_feature5": "Keine Kreditkarte erforderlich",
+  "pricing_basic_title": "Grundlegend",
+  "pricing_basic_desc": "Für Einzelpersonen, die anfangen",
+  "pricing_basic_feature1": "150 monatliche Credits (≈15 Boards)",
+  "pricing_basic_feature2": "KI-Kern-Vokabelbretter",
+  "pricing_basic_feature3": "KI-generierte Piktogramme",
+  "pricing_basic_feature4": "Manueller Export von Platinen",
+  "pricing_basic_feature5": "E-Mail-Unterstützung",
+  "pricing_standard_title": "Standard + Brett",
+  "pricing_standard_desc": "Für Fachleute, die Integration und Unterstützung benötigen",
+  "pricing_standard_feature1": "300 monatliche Credits (≈30 Boards)",
+  "pricing_standard_feature2": "Premium Cboard App-Zugang (im Wert von 8 USD)",
+  "pricing_standard_feature3": "Alle Grundfunktionen",
+  "pricing_standard_feature4": "Nahtloser Export nach Cboard",
+  "pricing_standard_feature5": "Vorrangiger Support",
+  "pricing_pro_title": "Profi + Vorstand",
+  "pricing_pro_desc": "Für Benutzer und Teams mit hohem Volumen",
+  "pricing_pro_feature1": "600 monatliche Credits (≈60 Boards)",
+  "pricing_pro_feature2": "Alle Standardfunktionen",
+  "pricing_pro_feature3": "Tools für die Zusammenarbeit im Team",
+  "pricing_pro_feature4": "Frühzeitiger Zugriff auf neue Funktionen",
+  "pricing_pro_feature5": "Ermäßigte zusätzliche Credits",
+  "faq_subtitle": "Haben Sie eine Frage? Schauen Sie sich unsere häufig gestellten Fragen an, um Ihre Antwort zu finden.",
+  "faq_question_01": "Was ist Cbuilder und wie funktioniert es?",
+  "faq_answer_01": "Cbuilder ist ein KI-gestütztes Tool, mit dem AAC-Kommunikationsboards erstellt werden können. Sie geben einfach die Abmessungen der Tafel ein und beschreiben ihren Zweck, und das Tool generiert relevantes Vokabular und Piktogramme unter Verwendung fortschrittlicher Sprach- und Bildmodelle.",
+  "faq_question_02": "Wie viele Credits braucht man, um ein Board zu erstellen?",
+  "faq_answer_02": "Jedes Board verbraucht in der Regel etwa 10 Credits. Ihr monatlicher Plan umfasst eine bestimmte Anzahl von Credits, und Sie können bei Bedarf zusätzliche Credits erwerben.",
+  "faq_question_03": "Was passiert, wenn ein Piktogramm nicht in der Datenbank vorhanden ist?",
+  "faq_answer_03": "Kein Problem – Cbuilder verwendet KI, um benutzerdefinierte Piktogramme zu generieren, wenn kein passendes Bild in der vorhandenen Datenbank gefunden wird, sodass Sie nie ohne visuelles Symbol dastehen.",
+  "faq_question_04": "Kann ich Boards in die Cboard-App exportieren?",
+  "faq_answer_04": "Ja! Wenn du den Standard- oder Pro-Plan nutzt, kannst du deine Boards nahtlos direkt in die Premium-Version der Cboard-Anwendung exportieren, um sie sofort zu verwenden.",
+  "faq_question_05": "Gibt es eine kostenlose Testversion?",
+  "faq_answer_05": "Ja, wir bieten eine kostenlose Testversion an, mit der Sie 40 Credits erhalten – genug, um 4 Vollboards zu erstellen. Für den Einstieg ist keine Kreditkarte erforderlich.",
+  "caption_news": "Nachrichten",
+  "caption_event": "Ereignis",
+  "news_readmore": "mehr lesen",
+  "footer_waiting": "Worauf wartest du?",
+  "title_home": "Heim",
+  "title_blog": "Blog",
+  "title_contact": "Kontakt",
+  "title_history": "Geschichte",
+  "title_privacy": "Datenschutzrichtlinie",
+  "title_locations": "Orte",
+  "title_team": "Mannschaft",
+  "title_pricing": "Auszeichnung",
+  "title_terms": "Nutzungsbedingungen",
+  "title_faq": "Häufig gestellte Fragen",
+  "title_help": "Hilfe",
+  "footer_company": "Firma",
+  "footer_resources": "Betriebsmittel",
+  "footer_legal": "Rechtlich"
 }
