--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -1,88 +1,138 @@
 {
-  "title": "A simple example",
-  "subtitle": "It's a blank-page. Start to build your'e page from here.",
-  "error_with_status": "An error occurred on server",
-  "404": "This page could not be found.",
-  "404_subtitle": "You can either stay and chill here, or go back to the beginning.",
-  "back": "back to home",
-  "error_without_status": "An error occurred on the server",
-  "contact_title": "Free Project Quote",
-  "contact_title2": "Say Hello to Us",
-  "contact_subtitle": "Do you have any questions? Are you ready to reduce cost and create new revenue? Or you simply want to say hi? Drop us a message.",
-  "form_name": "What is your name? *",
-  "form_email": "What it your email? *",
-  "form_phone": "What is your phone number?",
-  "form_company": "What is your company?",
-  "form_message": "Write your message here",
-  "form_terms": "I have read and accept the Terms of",
-  "form_privacy": "Service & Privacy Policy *",
-  "form_send": "Send Message",
-  "login": "login",
-  "login_create": "Create new account",
-  "login_or": "Or login with email",
-  "login_email": "Email",
-  "login_password": "Password",
-  "login_remember": "Remember",
-  "login_forgot": "Forgot Password",
-  "continue": "Continue",
-  "login_title": "Welcome back",
-  "login_subtitle": "Please login to continue",
-  "register": "Register",
-  "register_already": "Already have account?",
-  "register_or": "Or register with email",
-  "register_name": "Name? *",
-  "register_email": "Email? *",
-  "register_password": "Password",
-  "register_confirm": "Confirm Password",
-  "register_title": "Nice to meet you :)",
-  "register_subtitle": "Just register to join with us",
-  "accept": "Accept",
-  "en": "English",
-  "de": "Deutsch",
+  "title": "Un ejemplo simple",
+  "subtitle": "Es una página en blanco. Comienza a construir tu página desde aquí.",
+  "error_with_status": "Se ha producido un error en el servidor",
+  "404": "Esta página no se pudo encontrar.",
+  "404_subtitle": "Puedes quedarte y relajarte aquí, o volver al principio.",
+  "back": "Volver al inicio",
+  "error_without_status": "Se ha producido un error en el servidor",
+  "accept": "Aceptar",
+  "en": "Inglés",
+  "es": "Español",
+  "de": "Alemán",
   "zh": "简体中文",
-  "pt": "󠁥󠁮󠁧󠁿Português",
-  "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
+  "pt": "Português",
+  "id": "Bahasa Indonesia",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
-  "notif_msg": "This is an example of a message that is commonly used for important information to visitors or users. Please click the button beside to close this message.",
-  "saas-landing": {
-    "header_login": "log in",
-    "header_register": "register",
-    "header_language": "language",
-    "header_theme": "Theme mode",
-    "header_dark": "dark",
-    "header_light": "light",
-    "header_feature": "feature",
-    "header_testimonials": "testimonials",
-    "header_pricing": "pricing and plan",
-    "header_faq": "faq",
-    "header_contact": "contact",
-    "banner_title": "Amazing company deserve",
-    "banner_titlestrong": "amazing software",
-    "banner_subtitle": "Millions of happy users work better with our integrated Apps.",
-    "banner_watchvideo": "Watch Video",
-    "getstarted": "Get Started",
-    "counter_month": "Month",
-    "counter_free": "Free Trial",
-    "counter_users": "Active Users",
-    "counter_providers": "Providers",
-    "feature_title1": "Act on it-all",
-    "feature_titlestrong1": "in one dashboard",
-    "feature_desc1": "Our audience dashboard shows you pre-built segments like top locations, recent sources of growth, and even customer lifetime value (CLV).",
-    "see_detail": "See Detail",
-    "feature_title2": "Everything you need is a",
-    "feature_titlestrong2": "unique value proposition",
-    "feature_desc2": "With strong technical foundations, has allowed us to leverage business experts to build hundreds of improvements.",
-    "feature_title3": "Accelerating to Intelligent",
-    "feature_titlestrong3": "Enterprise",
-    "feature_desc3": "We empowers your marketing, sales and services teams to collaborate across the entire customer lifecycle for more meaningful, memorable experiences.",
-    "testi_title": "What Our Customers",
-    "testi_titlestrong": "Testimonial",
-    "pricing_title": "Pricing & Plan",
-    "pricing_subtitle": "The best value designed for your workplace, starting at just $24/user/month.",
-    "faq_subtitle": "Have a question? Check out our frequently asked questions to find your answer.",
-    "caption_news": "news",
-    "caption_event": "event",
-    "news_readmore": "read more",
-    "footer_waiting": "What are you waiting for?"
-  }
+  "notif_msg": "Utilizamos cookies para que nuestro sitio funcione. Con su consentimiento, utilizamos cookies para mejorar la experiencia del usuario y analizar el tráfico del sitio web. Al hacer clic en \"Aceptar\", acepta el uso de cookies en nuestro sitio web.",
+  "header_language": "Idioma",
+  "header_theme": "Tema",
+  "header_dark": "oscuro",
+  "header_light": "claro",
+  "header_feature": "Características",
+  "header_testimonials": "testimonios",
+  "header_pricing": "precio",
+  "header_faq": "faq",
+  "header_contact": "contacto",
+  "banner_title": "Crea tableros de CAA con el poder de la IA",
+  "banner_titlestrong": "",
+  "banner_subtitle": "Diseñado para terapeutas, educadores y cuidadores. Genere tableros de comunicación aumentativa personalizados al instante con Cboard AI Builder.",
+  "banner_watchvideo": "Ver vídeo",
+  "getstarted": "Empezar",
+  "counter_credits": "Créditos",
+  "counter_free": "Prueba gratis",
+  "counter_users": "Pictogramas",
+  "counter_providers": "Idiomas",
+  "counter_transactions": "Transacciones",
+  "feature_title1": "Tableros de vocabulario núcleo instantáneos",
+  "feature_titlestrong1": "con IA",
+  "feature_desc1": "Genere rápidamente tableros núcleo de CAA utilizando vocabulario esencial de alta frecuencia adaptado a las necesidades de cada usuario. Ahorre tiempo y apoye una comunicación más efectiva desde el principio.",
+  "see_detail": "Ver detalles",
+  "feature_title2": "Pictogramas generados por IA",
+  "feature_titlestrong2": "para cada concepto",
+  "feature_desc2": "¿Te falta un símbolo? No hay problema. Nuestra IA crea pictogramas personalizados cuando las imágenes existentes no están disponibles, lo que garantiza un soporte visual completo para cada palabra o frase.",
+  "feature_title3": "Exporte directamente a la",
+  "feature_titlestrong3": "App Cboard",
+  "feature_desc3": "Pasa de la creación de tableros a la comunicación con un solo clic. Exporta al instante tus tableros de CAA personalizados a la aplicación Cboard con total compatibilidad y sin configuración adicional.",
+  "testi_title": "Testimonios de nuestros usuarios",
+  "testi_titlestrong": "",
+  "testi1": "Esta herramienta ha cambiado por completo la forma en que construyo tableros de CAA. Lo que antes me llevaba horas, ahora me lleva minutos, y los resultados son aún más personalizados.",
+  "testi1Name": "Dr. Elena Ruiz",
+  "testi1Title": "Patólogo del habla y el lenguaje, Centro de Rehabilitación Infantil",
+  "testi2": "Los pictogramas generados por IA cambian las reglas del juego. Se acabaron las soluciones alternativas o las imágenes que faltan: siempre tenemos exactamente lo que necesitamos.",
+  "testi2Name": "Mark Jensen",
+  "testi2Title": "Especialista en Tecnología de Asistencia, Distrito Escolar de Oak Valley",
+  "testi3": "Como educadora especial, creo varios tableros a la semana. Cboard AI Builder ha reducido mi tiempo de preparación a la mitad sin sacrificar la calidad.",
+  "testi3Name": "Lisa Chen",
+  "testi3Title": "Maestra de Educación Especial, Escuela Primaria Maple Grove",
+  "testi4": "Me encanta la integración con la aplicación Cboard, es perfecta. Puedo crear e implementar tableros en un flujo de trabajo fluido.",
+  "testi4Name": "Carlos Álvarez",
+  "testi4Title": "Logopeda, Clínica de Voces Inclusivas",
+  "testi5": "¡Al fin!  Una herramienta de CAA que pone la potente IA en manos de educadores y terapeutas. Es intuitivo, eficiente y profundamente reflexivo.",
+  "testi5Name": "Ángela Thompson",
+  "testi5Title": "Directora de Comunicación Asistiva, Fundación Bright Horizons",
+  "testi6": "Ser capaz de generar tableros de vocabulario núcleo tan rápidamente ha tenido un gran impacto en mi carga de trabajo. Es una herramienta brillante.",
+  "testi6Name": "Priya Menon",
+  "testi6Title": "SLP, Servicios de Intervención Temprana",
+  "testi7": "La experiencia del usuario es increíble, lo suficientemente simple como para que cualquiera la use, pero potente bajo el capó. Una verdadera innovación en la tecnología de CAA.",
+  "testi7Name": "Jordán Lee",
+  "testi7Title": "Consultor de tecnología educativa y defensor de la CAA",
+  "testi8": "Trabajo en entornos de bajos recursos, y esta herramienta de IA me ayuda a proporcionar tableros de CAA de alta calidad sin necesidad de un gran equipo o presupuesto.",
+  "testi8Name": "Nadia García",
+  "testi8Title": "Educadora de Necesidades Especiales, Fundación Conectar",
+  "testi9": "La creación de pictogramas personalizados ha abierto nuevas posibilidades para los niños con enfermedades raras o necesidades de vocabulario muy específicas.",
+  "testi9Name": "Benjamín Walker",
+  "testi9Title": "Patólogo del habla, Centro de Neurodiversidad",
+  "testi10": "La velocidad y flexibilidad de esta herramienta son inigualables. Ahora se lo recomiendo a todos los terapeutas que entreno.",
+  "testi10Name": "Dra. Isabelle Fournier",
+  "testi10Title": "Formador de CAA y supervisor clínico, VoicePath Institute",
+  "pricing_title": "Tarifas",
+  "pricing_subtitle": "El mejor valor diseñado para su lugar de trabajo, desde solo $ 10 / usuario / mes.",
+  "pricing_free_title": "Prueba gratuita",
+  "pricing_free_desc": "Prueba Cbuilder sin compromiso",
+  "pricing_free_feature1": "40 créditos incluidos (≈4 tableros)",
+  "pricing_free_feature2": "Tableros de vocabulario núcleo con IA",
+  "pricing_free_feature3": "Pictogramas generados por IA",
+  "pricing_free_feature4": "Exportación manual de tableros",
+  "pricing_free_feature5": "No se requiere tarjeta de crédito",
+  "pricing_basic_title": "Básico",
+  "pricing_basic_desc": "Para las personas que comienzan",
+  "pricing_basic_feature1": "150 créditos mensuales (≈15 tableros)",
+  "pricing_basic_feature2": "Tableros de vocabulario núcleo con IA",
+  "pricing_basic_feature3": "Pictogramas generados por IA",
+  "pricing_basic_feature4": "Exportación manual de tableros",
+  "pricing_basic_feature5": "Soporte por Correo Electrónico",
+  "pricing_standard_title": "Estándar + Cboard",
+  "pricing_standard_desc": "Para profesionales que necesitan integración y apoyo",
+  "pricing_standard_feature1": "300 créditos mensuales (≈30 tableros)",
+  "pricing_standard_feature2": "Acceso a la aplicación Cboard Premium (valor de $8)",
+  "pricing_standard_feature3": "Todas las características básicas",
+  "pricing_standard_feature4": "Exportación sin problemas a Cboard",
+  "pricing_standard_feature5": "Soporte Prioritario",
+  "pricing_pro_title": "Pro + Cboard",
+  "pricing_pro_desc": "Para usuarios y equipos de gran volumen",
+  "pricing_pro_feature1": "600 créditos mensuales (≈60 tableros)",
+  "pricing_pro_feature2": "Todas las características estándar",
+  "pricing_pro_feature3": "Herramientas de colaboración en equipo",
+  "pricing_pro_feature4": "Acceso anticipado a nuevas funciones",
+  "pricing_pro_feature5": "Créditos Extra con Descuento",
+  "faq_subtitle": "¿Tiene alguna pregunta? Echa un vistazo a nuestras preguntas frecuentes para encontrar tu respuesta.",
+  "faq_question_01": "¿Qué es Cbuilder y cómo funciona?",
+  "faq_answer_01": "Cbuilder es una herramienta impulsada por IA que ayuda a crear tableros de comunicación AAC. Solo tienes que introducir las dimensiones del tablero y describir su propósito, y la herramienta genera vocabulario y pictogramas relevantes utilizando modelos avanzados de lenguaje e imagen.",
+  "faq_question_02": "¿Cuántos créditos se necesitan para crear un tablero?",
+  "faq_answer_02": "Cada tablero suele consumir unos 10 créditos. Tu plan mensual incluye una cantidad específica de créditos y puedes comprar créditos adicionales si los necesitas.",
+  "faq_question_03": "¿Qué pasa si un pictograma no existe en la base de datos?",
+  "faq_answer_03": "No hay problema: Cbuilder utiliza la IA para generar pictogramas personalizados cuando no se encuentra una imagen adecuada en la base de datos existente, por lo que nunca se quedará sin un símbolo visual.",
+  "faq_question_04": "¿Puedo exportar tableros a la aplicación Cboard?",
+  "faq_answer_04": "¡Sí! Si estás en el plan Standard o Pro, puedes exportar sin problemas tus tableros directamente a la versión premium de la aplicación Cboard para su uso inmediato.",
+  "faq_question_05": "¿Hay una prueba gratuita disponible?",
+  "faq_answer_05": "Sí, ofrecemos una prueba gratuita que te da 40 créditos, suficientes para crear 4 tablas completas. No se requiere tarjeta de crédito para comenzar.",
+  "caption_news": "noticias",
+  "caption_event": "evento",
+  "news_readmore": "leer más",
+  "footer_waiting": "¿Qué estás esperando?",
+  "title_home": "Inicio",
+  "title_blog": "Blog",
+  "title_contact": "Contacto",
+  "title_history": "Historia",
+  "title_privacy": "Política de privacidad",
+  "title_locations": "Ubicaciones",
+  "title_team": "Equipo",
+  "title_pricing": "Precios",
+  "title_terms": "Términos del servicio",
+  "title_faq": "FAQ",
+  "title_help": "Ayuda",
+  "footer_company": "Empresa",
+  "footer_resources": "Recursos",
+  "footer_legal": "Legal"
 }
