--- a/public/locales/id/common.json
+++ b/public/locales/id/common.json
@@ -1,88 +1,138 @@
 {
   "title": "Contoh sederhana",
-  "subtitle": "Ini halaman kosong. Mulai buat halaman Anda dari sini.",
+  "subtitle": "Ini adalah halaman kosong. Mulailah membangun halaman Anda dari sini.",
   "error_with_status": "Terjadi kesalahan di server",
   "404": "Halaman ini tidak dapat ditemukan.",
-  "404_subtitle": "Anda bisa tinggal dan bersantai di sini, atau kembali ke awal.",
-  "back": "kembali ke beranda",
+  "404_subtitle": "Anda dapat tinggal dan bersantai di sini, atau kembali ke awal.",
+  "back": "Kembali ke Beranda",
   "error_without_status": "Terjadi kesalahan di server",
-  "contact_title": "Kutipan Proyek Gratis",
-  "contact_title2": "Katakan Halo kepada Kami",
-  "contact_subtitle": "Apakah Anda memiliki pertanyaan? Apakah Anda siap untuk mengurangi biaya dan membuat pendapatan baru? Atau Anda hanya ingin menyapa? Kirim pesan kepada kami.",
-  "form_name": "Siapa nama Anda? *",
-  "form_email": "Apa itu email Anda? *",
-  "form_phone": "Berapa nomor telepon Anda?",
-  "form_company": "Apa perusahaan Anda?",
-  "form_message": "Tulis pesan Anda di sini",
-  "form_terms": "Saya telah membaca dan menerima Ketentuan",
-  "form_privacy": "Layanan & Kebijakan Privasi *",
-  "form_send": "Kirim Pesan",
-  "login": "masuk",
-  "login_create": "Buat akun baru",
-  "login_or": "Atau masuk dengan email",
-  "login_email": "Email",
-  "login_password": "Kata Sandi",
-  "login_remember": "Ingat",
-  "login_forgot": "Lupa Kata Sandi",
-  "continue": "Lanjutkan",
-  "login_title": "Selamat datang kembali",
-  "login_subtitle": "Silakan masuk untuk melanjutkan",
-  "register": "Daftar",
-  "register_already": "Sudah punya akun?",
-  "register_or": "Atau daftar dengan email",
-  "register_name": "Nama? *",
-  "register_email": "Email? *",
-  "register_password": "Kata Sandi",
-  "register_confirm": "Konfirmasi Kata Sandi",
-  "register_title": "Senang bertemu Anda :)",
-  "register_subtitle": "Cukup daftar untuk bergabung dengan kami",
-  "accept": "Setuju",
-  "en": "English",
+  "accept": "Terima",
+  "en": "Inggris",
+  "es": "Spanyol",
   "de": "Deutsch",
   "zh": "简体中文",
-  "pt": "󠁥󠁮󠁧󠁿Português",
-  "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
+  "pt": "Português",
+  "id": "Bahasa Indonesia",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
-  "notif_msg": "Ini adalah contoh pesan yang biasa digunakan untuk informasi penting kepada pengunjung atau pengguna. Silahkan klik tombol disamping untuk menutup pesan ini.",
-  "saas-landing": {
-    "header_login": "masuk",
-    "header_register": "daftar",
-    "header_language": "bahasa",
-    "header_theme": "Mode tema",
-    "header_dark": "gelpa",
-    "header_light": "terang",
-    "header_feature": "fitur",
-    "header_testimonials": "testimoni",
-    "header_pricing": "penetapan harga dan paket",
-    "header_faq": "faq",
-    "header_contact": "kontak",
-    "banner_title": "Perusahaan yang luar biasa",
-    "banner_titlestrong": "perangkat lunak luar biasa",
-    "banner_subtitle": "Jutaan pengguna bahagia bekerja lebih baik dengan Aplikasi terintegrasi kami.",
-    "banner_watchvideo": "Tonton Video",
-    "getstarted": "Memulai",
-    "counter_month": "Bulan",
-    "counter_free": "Uji Coba Gratis",
-    "counter_users": "Pengguna Aktif",
-    "counter_providers": "Provider",
-    "feature_title1": "Act on it-all",
-    "feature_titlestrong1": "dalam satu dashboard",
-    "feature_desc1": "Dasbor pemirsa kami menunjukkan kepada Anda segmen yang dibangun sebelumnya seperti lokasi teratas, sumber pertumbuhan terbaru, dan bahkan nilai seumur hidup pelanggan (CLV).",
-    "see_detail": "Lihat Detail",
-    "feature_title2": "Semua yang Anda butuhkan adalah",
-    "feature_titlestrong2": "proposisi nilai unik",
-    "feature_desc2": "Dengan fondasi teknis yang kuat, telah memungkinkan kami memanfaatkan para pakar bisnis untuk membangun ratusan peningkatan.",
-    "feature_title3": "Akselerasi ke Cerdas",
-    "feature_titlestrong3": "Enterprise",
-    "feature_desc3": "Kami memberdayakan tim pemasaran, penjualan, dan layanan Anda untuk berkolaborasi di seluruh siklus hidup pelanggan untuk pengalaman yang lebih bermakna dan mengesankan.",
-    "testi_title": "Apa Pelanggan Kami",
-    "testi_titlestrong": "Testimonial",
-    "pricing_title": "Harga & Paket",
-    "pricing_subtitle": "Nilai terbaik yang dirancang untuk tempat kerja Anda, mulai dari $ 24 / pengguna / bulan.",
-    "faq_subtitle": "Ada pertanyaan? Lihat pertanyaan umum kami untuk menemukan jawaban Anda.",
-    "caption_news": "berita",
-    "caption_event": "acara",
-    "news_readmore": "baca lebih lanjut",
-    "footer_waiting": "Apa yang Anda tunggu?"
-  }
+  "notif_msg": "Kami menggunakan cookie untuk membuat situs kami berfungsi. Dengan persetujuan Anda, kami menggunakan cookie untuk meningkatkan pengalaman pengguna dan menganalisis lalu lintas situs web. Dengan mengklik \"Terima\", Anda menyetujui penggunaan cookie di situs web kami.",
+  "header_language": "Bahasa",
+  "header_theme": "Mode tema",
+  "header_dark": "gelap",
+  "header_light": "ringan",
+  "header_feature": "Fitur",
+  "header_testimonials": "Testimonial",
+  "header_pricing": "Harga",
+  "header_faq": "Faq",
+  "header_contact": "kontak",
+  "banner_title": "Bangun papan AAC dengan kekuatan AI",
+  "banner_titlestrong": "",
+  "banner_subtitle": "Dirancang untuk terapis, pendidik, dan pengasuh. Hasilkan papan komunikasi augmentatif yang dipersonalisasi secara instan dengan Cboard AI Builder.",
+  "banner_watchvideo": "Tonton Video",
+  "getstarted": "Memulai",
+  "counter_credits": "Kredit",
+  "counter_free": "Uji Coba Gratis",
+  "counter_users": "Simbol AAC",
+  "counter_providers": "Bahasa",
+  "counter_transactions": "Transaksi",
+  "feature_title1": "Papan Kosakata Inti Instan",
+  "feature_titlestrong1": "dengan AI",
+  "feature_desc1": "Hasilkan papan inti AAC dengan cepat menggunakan kosakata frekuensi tinggi yang penting yang disesuaikan dengan kebutuhan setiap pengguna. Hemat waktu dan dukung komunikasi yang lebih efektif sejak awal.",
+  "see_detail": "Lihat Detail",
+  "feature_title2": "Piktogram yang Dihasilkan AI",
+  "feature_titlestrong2": "untuk Setiap Konsep",
+  "feature_desc2": "Kehilangan simbol? Tidak ada masalah. AI kami membuat piktogram khusus saat gambar yang ada tidak tersedia, memastikan dukungan visual penuh untuk setiap kata atau frasa.",
+  "feature_title3": "Ekspor Langsung ke",
+  "feature_titlestrong3": "Aplikasi Cboard",
+  "feature_desc3": "Beralih dari pembuatan papan ke komunikasi dalam satu klik. Ekspor papan AAC khusus Anda secara instan ke aplikasi Cboard dengan kompatibilitas penuh dan tanpa pengaturan tambahan.",
+  "testi_title": "Testimonial dari Pengguna Kami",
+  "testi_titlestrong": "",
+  "testi1": "Alat ini telah benar-benar mengubah cara saya membuat papan AAC. Apa yang dulunya memakan waktu berjam-jam sekarang membutuhkan waktu beberapa menit—dan hasilnya bahkan lebih personal.",
+  "testi1Name": "Dr. Elena Ruiz",
+  "testi1Title": "Ahli Patologi Wicara-Bahasa, Pusat Rehabilitasi Anak",
+  "testi2": "Piktogram yang dihasilkan AI adalah pengubah permainan. Tidak ada lagi solusi atau gambar yang hilang—kita selalu memiliki apa yang kita butuhkan.",
+  "testi2Name": "Tandai Jensen",
+  "testi2Title": "Spesialis Teknologi Bantuan, Distrik Sekolah Oak Valley",
+  "testi3": "Sebagai pendidik khusus, saya membuat beberapa papan seminggu. Cboard AI Builder telah memangkas waktu persiapan saya menjadi dua tanpa mengorbankan kualitas.",
+  "testi3Name": "Lisa Chen",
+  "testi3Title": "Guru Pendidikan Khusus, Sekolah Dasar Maple Grove",
+  "testi4": "Saya suka integrasi dengan aplikasi Cboard—mulus. Saya dapat membuat dan menyebarkan papan dalam satu alur kerja yang lancar.",
+  "testi4Name": "Carlos Alvarez",
+  "testi4Title": "Terapis Wicara, Klinik Suara Inklusif",
+  "testi5": "Terakhir, alat AAC yang menempatkan AI yang kuat ke tangan pendidik dan terapis. Ini intuitif, efisien, dan sangat bijaksana.",
+  "testi5Name": "Angela Thompson",
+  "testi5Title": "Direktur Komunikasi Bantuan, Yayasan Bright Horizons",
+  "testi6": "Mampu menghasilkan papan kosakata inti dengan begitu cepat telah berdampak besar pada beban kasus saya. Ini adalah alat yang brilian.",
+  "testi6Name": "Priya Menon",
+  "testi6Title": "SLP, Layanan Intervensi Dini",
+  "testi7": "Pengalaman penggunanya luar biasa—cukup sederhana untuk digunakan siapa saja, tetapi kuat di bawah tenda. Inovasi sejati dalam teknologi AAC.",
+  "testi7Name": "Jordan Lee",
+  "testi7Title": "Konsultan EdTech dan Advokat AAC",
+  "testi8": "Saya bekerja dalam pengaturan sumber daya rendah, dan alat AI ini membantu saya menyediakan papan AAC berkualitas tinggi tanpa memerlukan tim atau anggaran besar.",
+  "testi8Name": "Nadia García",
+  "testi8Title": "Pendidik Berkebutuhan Khusus, Fundación Conectar",
+  "testi9": "Pembuatan piktogram khusus telah membuka kemungkinan baru bagi anak-anak dengan kondisi langka atau kebutuhan kosakata yang sangat spesifik.",
+  "testi9Name": "Benyamin Walker",
+  "testi9Title": "Ahli Patologi wicara, Pusat Keanekaragaman Saraf",
+  "testi10": "Kecepatan dan fleksibilitas alat ini tak tertandingi. Sekarang saya merekomendasikannya kepada setiap terapis yang saya latih.",
+  "testi10Name": "Dr. Isabelle Fournier",
+  "testi10Title": "Pelatih AAC & Pengawas Klinis, VoicePath Institute",
+  "pricing_title": "Paket Harga",
+  "pricing_subtitle": "Nilai terbaik yang dirancang untuk tempat kerja Anda, mulai dari hanya $10/pengguna/bulan.",
+  "pricing_free_title": "Uji Coba Gratis",
+  "pricing_free_desc": "Coba Cbuilder tanpa komitmen",
+  "pricing_free_feature1": "40 kredit termasuk (≈4 papan)",
+  "pricing_free_feature2": "Papan Kosakata Inti AI",
+  "pricing_free_feature3": "Piktogram yang Dihasilkan AI",
+  "pricing_free_feature4": "Ekspor Papan Manual",
+  "pricing_free_feature5": "Tidak Perlu Kartu Kredit",
+  "pricing_basic_title": "Dasar",
+  "pricing_basic_desc": "Untuk individu yang memulai",
+  "pricing_basic_feature1": "150 kredit bulanan (≈15 papan)",
+  "pricing_basic_feature2": "Papan Kosakata Inti AI",
+  "pricing_basic_feature3": "Piktogram yang Dihasilkan AI",
+  "pricing_basic_feature4": "Ekspor Papan Manual",
+  "pricing_basic_feature5": "Dukungan Email",
+  "pricing_standard_title": "Standar + Cboard",
+  "pricing_standard_desc": "Untuk profesional yang membutuhkan integrasi dan dukungan",
+  "pricing_standard_feature1": "300 kredit bulanan (≈30 papan)",
+  "pricing_standard_feature2": "Akses Aplikasi Cboard Premium (nilai $8)",
+  "pricing_standard_feature3": "Semua Fitur Dasar",
+  "pricing_standard_feature4": "Ekspor Mulus ke Cboard",
+  "pricing_standard_feature5": "Dukungan Prioritas",
+  "pricing_pro_title": "Pro + Papan",
+  "pricing_pro_desc": "Untuk pengguna dan tim bervolume tinggi",
+  "pricing_pro_feature1": "600 kredit bulanan (≈60 papan)",
+  "pricing_pro_feature2": "Semua Fitur Standar",
+  "pricing_pro_feature3": "Alat Kolaborasi Tim",
+  "pricing_pro_feature4": "Akses Awal ke Fitur Baru",
+  "pricing_pro_feature5": "Kredit Ekstra Diskon",
+  "faq_subtitle": "Punya pertanyaan? Lihat pertanyaan umum kami untuk menemukan jawaban Anda.",
+  "faq_question_01": "Apa itu Cbuilder dan bagaimana cara kerjanya?",
+  "faq_answer_01": "Cbuilder adalah alat bertenaga AI yang membantu membuat papan komunikasi AAC. Anda cukup memasukkan dimensi papan dan menjelaskan tujuannya, dan alat ini menghasilkan kosakata dan piktogram yang relevan menggunakan model bahasa dan gambar lanjutan.",
+  "faq_question_02": "Berapa banyak kredit yang diperlukan untuk membuat papan?",
+  "faq_answer_02": "Setiap papan biasanya menghabiskan sekitar 10 kredit. Paket bulanan Anda mencakup jumlah kredit tertentu, dan Anda dapat membeli kredit tambahan jika diperlukan.",
+  "faq_question_03": "Apa yang terjadi jika piktogram tidak ada di database?",
+  "faq_answer_03": "Tidak masalah—Cbuilder menggunakan AI untuk menghasilkan piktogram khusus ketika tidak ada gambar yang sesuai yang ditemukan di database yang ada, jadi Anda tidak akan pernah dibiarkan tanpa simbol visual.",
+  "faq_question_04": "Bisakah saya mengekspor papan ke aplikasi Cboard?",
+  "faq_answer_04": "Ya! Jika Anda menggunakan paket Standar atau Pro, Anda dapat mengekspor papan Anda dengan mulus langsung ke versi premium aplikasi Cboard untuk segera digunakan.",
+  "faq_question_05": "Apakah ada uji coba gratis yang tersedia?",
+  "faq_answer_05": "Ya, kami menawarkan uji coba gratis yang memberi Anda 40 kredit—cukup untuk membuat 4 papan penuh. Tidak diperlukan kartu kredit untuk memulai.",
+  "caption_news": "berita",
+  "caption_event": "peristiwa",
+  "news_readmore": "Baca selengkapnya",
+  "footer_waiting": "Tunggu apalagi?",
+  "title_home": "Rumah",
+  "title_blog": "Berita",
+  "title_contact": "Kontak",
+  "title_history": "Sejarah",
+  "title_privacy": "Kebijakan Privasi",
+  "title_locations": "Lokasi",
+  "title_team": "Tim",
+  "title_pricing": "Harga",
+  "title_terms": "Ketentuan Layanan",
+  "title_faq": "FAQ",
+  "title_help": "Tolong",
+  "footer_company": "Firma",
+  "footer_resources": "Sumber daya",
+  "footer_legal": "Hukum"
 }
