--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -1,88 +1,138 @@
 {
   "title": "Um exemplo simples",
-  "subtitle": "É uma página em branco. Comece a construir sua página aqui.",
+  "subtitle": "É uma página em branco. Comece a construir sua página a partir daqui.",
   "error_with_status": "Ocorreu um erro no servidor",
-  "404": "Não foi possível encontrar esta página.",
-  "404_subtitle": "Você pode ficar e relaxar aqui, ou voltar ao começo.",
-  "back": "voltar para casa",
+  "404": "Esta página não pôde ser encontrada.",
+  "404_subtitle": "Você pode ficar e relaxar aqui ou voltar ao início.",
+  "back": "Voltar para casa",
   "error_without_status": "Ocorreu um erro no servidor",
-  "contact_title": "Orçamento gratuito do projeto",
-  "contact_title2": "Diga Olá para nós",
-  "contact_subtitle": "Você tem alguma dúvida? Você está pronto para reduzir custos e criar novas receitas? Ou simplesmente quer dizer oi? Envie-nos uma mensagem.",
-  "form_name": "Qual é o seu nome? *",
-  "form_email": "Qual é o seu email? *",
-  "form_phone": "Qual é o seu número de telefone?",
-  "form_company": "Qual é a sua empresa?",
-  "form_message": "Escreva sua mensagem aqui",
-  "form_terms": "Li e aceito os Termos de",
-  "form_privacy": "Serviço e política de privacidade *",
-  "form_send": "Enviar mensagem",
-  "login": "login",
-  "login_create": "Crie uma nova conta",
-  "login_or": "Ou entre com o e-mail",
-  "login_email": "E-mail",
-  "login_password": "Senha",
-  "login_remember": "Lembre-se",
-  "login_forgot": "Esqueceu a senha",
-  "continue": "Continuar",
-  "login_title": "Bem-vindo de volta",
-  "login_subtitle": "Faça o login para continuar",
-  "register": "Registo",
-  "register_already": "Já possui uma conta?",
-  "register_or": "Ou registre-se com o email",
-  "register_name": "Nome? *",
-  "register_email": "E-mail? *",
-  "register_password": "Senha",
-  "register_confirm": "Confirmar senha",
-  "register_title": "Prazer em conhecê-lo :)",
-  "register_subtitle": "Basta registrar-se para se juntar a nós",
-  "accept": "aceitar",
-  "en": "English",
+  "accept": "Aceitar",
+  "en": "Inglês",
+  "es": "Espanhol",
   "de": "Deutsch",
   "zh": "简体中文",
-  "pt": "󠁥󠁮󠁧󠁿Português",
-  "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
+  "pt": "Português",
+  "id": "Bahasa Indonesia",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
-  "notif_msg": "Este é um exemplo de mensagem comumente usada para informações importantes para visitantes ou usuários. Clique no botão ao lado para fechar esta mensagem.",
-  "saas-landing": {
-    "header_login": "faça login",
-    "header_register": "registo",
-    "header_language": "língua",
-    "header_theme": "Modo de tema",
-    "header_dark": "escuro",
-    "header_light": "luz",
-    "header_feature": "característica",
-    "header_testimonials": "depoimentos",
-    "header_pricing": "preços e plano",
-    "header_faq": "faq",
-    "header_contact": "contato",
-    "banner_title": "Empresa incrível merece",
-    "banner_titlestrong": "software incrível",
-    "banner_subtitle": "Milhões de usuários satisfeitos trabalham melhor com nossos aplicativos integrados.",
-    "banner_watchvideo": "Assista ao vídeo",
-    "getstarted": "Primeiros passos",
-    "counter_month": "Mês",
-    "counter_free": "Avaliação gratuita",
-    "counter_users": "Usuários ativos",
-    "counter_providers": "Provedores",
-    "feature_title1": "Aja com tudo",
-    "feature_titlestrong1": "em um painel",
-    "feature_desc1": "Nosso painel de público-alvo mostra segmentos pré-criados, como locais principais, fontes recentes de crescimento e até mesmo valor de vida útil do cliente (CLV).",
-    "see_detail": "Ver detalhe",
-    "feature_title2": "Tudo o que você precisa é um",
-    "feature_titlestrong2": "proposta de valor exclusivo",
-    "feature_desc2": "Com fortes fundamentos técnicos, nos permitiu alavancar especialistas em negócios para criar centenas de melhorias.",
-    "feature_title3": "Acelerando para o Intelligent",
-    "feature_titlestrong3": "Enterprise",
-    "feature_desc3": "Capacitamos suas equipes de marketing, vendas e serviços a colaborar em todo o ciclo de vida do cliente para obter experiências mais significativas e memoráveis.",
-    "testi_title": "O que nossos clientes",
-    "testi_titlestrong": "Depoimento",
-    "pricing_title": "Preços e plano",
-    "pricing_subtitle": "O melhor valor projetado para o seu local de trabalho, a partir de apenas US $ 24 / usuário / mês.",
-    "faq_subtitle": "Tem uma pergunta? Consulte nossas perguntas frequentes para encontrar sua resposta.",
-    "caption_news": "notícia",
-    "caption_event": "evento",
-    "news_readmore": "leia mais",
-    "footer_waiting": "O que você está esperando?"
-  }
+  "notif_msg": "Usamos cookies para fazer nosso site funcionar. Com o seu consentimento, usamos cookies para melhorar a experiência do usuário e analisar o tráfego do site. Ao clicar em \"Aceitar\", você concorda com o uso de cookies em nosso site.",
+  "header_language": "Idioma",
+  "header_theme": "Modo tema",
+  "header_dark": "escuro",
+  "header_light": "luz",
+  "header_feature": "Características",
+  "header_testimonials": "Depoimentos",
+  "header_pricing": "precificação",
+  "header_faq": "Perguntas Freqüentes",
+  "header_contact": "contato",
+  "banner_title": "Crie placas AAC com o poder da IA",
+  "banner_titlestrong": "",
+  "banner_subtitle": "Projetado para terapeutas, educadores e cuidadores. Gere quadros de comunicação aumentativos personalizados instantaneamente com o Cboard AI Builder.",
+  "banner_watchvideo": "Assista ao vídeo",
+  "getstarted": "Começar",
+  "counter_credits": "Créditos",
+  "counter_free": "Teste grátis",
+  "counter_users": "Símbolos AAC",
+  "counter_providers": "Idiomas",
+  "counter_transactions": "Transações",
+  "feature_title1": "Quadros de vocabulário básicos instantâneos",
+  "feature_titlestrong1": "com IA",
+  "feature_desc1": "Gere rapidamente placas principais de AAC usando vocabulário essencial de alta frequência adaptado às necessidades de cada usuário. Economize tempo e apoie uma comunicação mais eficaz desde o início.",
+  "see_detail": "Ver detalhes",
+  "feature_title2": "Pictogramas gerados por IA",
+  "feature_titlestrong2": "para cada conceito",
+  "feature_desc2": "Falta um símbolo? Não há problema. Nossa IA cria pictogramas personalizados quando as imagens existentes não estão disponíveis, garantindo suporte visual completo para cada palavra ou frase.",
+  "feature_title3": "Exporte diretamente para o",
+  "feature_titlestrong3": "Aplicativo Cboard",
+  "feature_desc3": "Passe da criação do quadro para a comunicação com um clique. Exporte instantaneamente suas placas AAC personalizadas para o aplicativo Cboard com total compatibilidade e sem configuração extra.",
+  "testi_title": "Depoimentos de nossos usuários",
+  "testi_titlestrong": "",
+  "testi1": "Essa ferramenta mudou completamente a forma como construo placas AAC. O que costumava levar horas agora leva minutos - e os resultados são ainda mais personalizados.",
+  "testi1Name": "Dra. Elena Ruiz",
+  "testi1Title": "Fonoaudióloga, Centro de Reabilitação Infantil",
+  "testi2": "Os pictogramas gerados por IA são um divisor de águas. Chega de soluções alternativas ou imagens ausentes - sempre temos exatamente o que precisamos.",
+  "testi2Name": "Marcos Jensen",
+  "testi2Title": "Especialista em Tecnologia Assistiva, Distrito Escolar de Oak Valley",
+  "testi3": "Como educador especial, crio vários quadros por semana. O Cboard AI Builder reduziu meu tempo de preparação pela metade sem sacrificar a qualidade.",
+  "testi3Name": "Lisa Chen",
+  "testi3Title": "Professora de Educação Especial, Maple Grove Elementary",
+  "testi4": "Adoro a integração com o aplicativo Cboard - é perfeita. Posso criar e implantar quadros em um fluxo de trabalho suave.",
+  "testi4Name": "Carlos Alvarez",
+  "testi4Title": "Fonoaudióloga, Clínica de Vozes Inclusivas",
+  "testi5": "Finalmente, uma ferramenta AAC que coloca uma IA poderosa nas mãos de educadores e terapeutas. É intuitivo, eficiente e profundamente atencioso.",
+  "testi5Name": "Ângela Thompson",
+  "testi5Title": "Diretor de Comunicação Assistiva, Bright Horizons Foundation",
+  "testi6": "Ser capaz de gerar quadros de vocabulário básico tão rapidamente causou um grande impacto no meu número de casos. É uma ferramenta brilhante.",
+  "testi6Name": "Priya Menon",
+  "testi6Title": "SLP, Serviços de Intervenção Precoce",
+  "testi7": "A experiência do usuário é incrível, simples o suficiente para qualquer pessoa usar, mas poderosa nos bastidores. Uma verdadeira inovação em tecnologia AAC.",
+  "testi7Name": "Jordânia Lee",
+  "testi7Title": "Consultor EdTech e Defensor de AAC",
+  "testi8": "Eu trabalho em ambientes de poucos recursos, e essa ferramenta de IA me ajuda a fornecer placas AAC de alta qualidade sem precisar de uma grande equipe ou orçamento.",
+  "testi8Name": "Nádia García",
+  "testi8Title": "Educador com Necessidades Especiais, Fundación Conectar",
+  "testi9": "A criação de pictogramas personalizados abriu novas possibilidades para crianças com condições raras ou necessidades de vocabulário muito específicas.",
+  "testi9Name": "Benjamim Walker",
+  "testi9Title": "Fonoaudióloga, Centro de Neurodiversidade",
+  "testi10": "A velocidade e a flexibilidade desta ferramenta são incomparáveis. Agora recomendo a todos os terapeutas que treino.",
+  "testi10Name": "Dra. Isabelle Fournier",
+  "testi10Title": "Instrutor de AAC e Supervisor Clínico, VoicePath Institute",
+  "pricing_title": "Planos de preços",
+  "pricing_subtitle": "O melhor valor projetado para o seu local de trabalho, a partir de apenas US$ 10/usuário/mês.",
+  "pricing_free_title": "Teste grátis",
+  "pricing_free_desc": "Experimente o Cbuilder sem compromisso",
+  "pricing_free_feature1": "40 créditos incluídos (≈4 quadros)",
+  "pricing_free_feature2": "Quadros de vocabulário principais de IA",
+  "pricing_free_feature3": "Pictogramas gerados por IA",
+  "pricing_free_feature4": "Exportação manual de placas",
+  "pricing_free_feature5": "Não é necessário cartão de crédito",
+  "pricing_basic_title": "Básico",
+  "pricing_basic_desc": "Para indivíduos que estão começando",
+  "pricing_basic_feature1": "150 créditos mensais (≈15 quadros)",
+  "pricing_basic_feature2": "Quadros de vocabulário principais de IA",
+  "pricing_basic_feature3": "Pictogramas gerados por IA",
+  "pricing_basic_feature4": "Exportação manual de placas",
+  "pricing_basic_feature5": "Suporte por e-mail",
+  "pricing_standard_title": "Padrão + Cboard",
+  "pricing_standard_desc": "Para profissionais que precisam de integração e suporte",
+  "pricing_standard_feature1": "300 créditos mensais (≈30 quadros)",
+  "pricing_standard_feature2": "Acesso ao aplicativo Cboard Premium (valor de US$ 8)",
+  "pricing_standard_feature3": "Todos os recursos básicos",
+  "pricing_standard_feature4": "Exportação perfeita para Cboard",
+  "pricing_standard_feature5": "Suporte prioritário",
+  "pricing_pro_title": "Pro + Cboard",
+  "pricing_pro_desc": "Para usuários e equipes de alto volume",
+  "pricing_pro_feature1": "600 créditos mensais (≈60 quadros)",
+  "pricing_pro_feature2": "Todos os recursos padrão",
+  "pricing_pro_feature3": "Ferramentas de colaboração em equipe",
+  "pricing_pro_feature4": "Acesso antecipado a novos recursos",
+  "pricing_pro_feature5": "Créditos extras com desconto",
+  "faq_subtitle": "Tem uma pergunta? Confira nossas perguntas frequentes para encontrar sua resposta.",
+  "faq_question_01": "O que é o Cbuilder e como funciona?",
+  "faq_answer_01": "O Cbuilder é uma ferramenta com inteligência artificial que ajuda a criar placas de comunicação AAC. Basta inserir as dimensões do quadro e descrever sua finalidade, e a ferramenta gera vocabulário e pictogramas relevantes usando modelos avançados de linguagem e imagem.",
+  "faq_question_02": "Quantos créditos são necessários para criar um quadro?",
+  "faq_answer_02": "Cada placa normalmente consome cerca de 10 créditos. Seu plano mensal inclui um número específico de créditos e você pode comprar créditos adicionais, se necessário.",
+  "faq_question_03": "O que acontece se um pictograma não existir no banco de dados?",
+  "faq_answer_03": "Não há problema - o Cbuilder usa IA para gerar pictogramas personalizados quando nenhuma imagem adequada é encontrada no banco de dados existente, para que você nunca fique sem um símbolo visual.",
+  "faq_question_04": "Posso exportar quadros para o aplicativo Cboard?",
+  "faq_answer_04": "Sim! Se você estiver no plano Standard ou Pro, poderá exportar facilmente suas placas diretamente para a versão premium do aplicativo Cboard para uso imediato.",
+  "faq_question_05": "Existe uma avaliação gratuita disponível?",
+  "faq_answer_05": "Sim, oferecemos uma avaliação gratuita que lhe dá 40 créditos, o suficiente para criar 4 pranchas completas. Não é necessário cartão de crédito para começar.",
+  "caption_news": "notícia",
+  "caption_event": "acontecimento",
+  "news_readmore": "Leia mais",
+  "footer_waiting": "O que você está esperando?",
+  "title_home": "Casa",
+  "title_blog": "Blogue",
+  "title_contact": "Contato",
+  "title_history": "História",
+  "title_privacy": "Política de privacidade",
+  "title_locations": "Locais",
+  "title_team": "Equipe",
+  "title_pricing": "Precificação",
+  "title_terms": "Termos de Serviço",
+  "title_faq": "Perguntas Freqüentes",
+  "title_help": "Ajuda",
+  "footer_company": "Companhia",
+  "footer_resources": "Recursos",
+  "footer_legal": "Legal"
 }
