--- a/public/locales/zh/common.json
+++ b/public/locales/zh/common.json
@@ -1,88 +1,138 @@
 {
-  "title": "一个简单的例子",
-  "subtitle": "这是一个空白页面。从这里开始建立你的页面。",
-  "error_with_status": "服务器上发生错误",
-  "404": "无法找到此页面。",
-  "404_subtitle": "你可以留在这里冷静，或者回到起点。",
-  "back": "回到家",
-  "error_without_status": "服务器上发生错误",
-  "contact_title": "免费项目报价",
-  "contact_title2": "向我们问好",
-  "contact_subtitle": "你有什么问题吗？你准备好降低成本并创造新的收入吗？或者你只是想打个招呼？给我们留言。",
-  "form_name": "你叫什么名字？*",
-  "form_email": "你的电子邮件是什么？*",
-  "form_phone": "你的电话号码是多少？",
-  "form_company": "你的公司是什么？",
-  "form_message": "在这里写下你的留言",
-  "form_terms": "我已阅读并接受条款",
-  "form_privacy": "服务与隐私政策*",
-  "form_send": "发送消息",
-  "login": "登录",
-  "login_create": "创建新帐户",
-  "login_or": "或通过电子邮件登录",
-  "login_email": "电子邮件",
-  "login_password": "密码",
-  "login_remember": "记住",
-  "login_forgot": "忘记密码",
-  "continue": "继续",
-  "login_title": "欢迎回来",
-  "login_subtitle": "请先登录以继续",
-  "register": "注册",
-  "register_already": "已经有帐户？",
-  "register_or": "或通过电子邮件注册",
-  "register_name": "名称？*",
-  "register_email": "电子邮件？*",
-  "register_password": "密码",
-  "register_confirm": "确认密码",
-  "register_title": "很高兴认识您:)",
-  "register_subtitle": "只需注册即可加入我们",
-  "accept": "接受",
+  "title": "A simple example",
+  "subtitle": "It's a blank-page. Start to build your'e page from here.",
+  "error_with_status": "An error occurred on server",
+  "404": "This page could not be found.",
+  "404_subtitle": "You can either stay and chill here, or go back to the beginning.",
+  "back": "back to home",
+  "error_without_status": "An error occurred on the server",
+  "accept": "Accept",
   "en": "English",
+  "es": "Spanish",
   "de": "Deutsch",
   "zh": "简体中文",
   "pt": "󠁥󠁮󠁧󠁿Português",
   "id": "󠁥󠁮󠁧󠁿Bahasa Indonesia",
   "ar": "󠁥󠁮󠁧󠁿العربيّة",
-  "notif_msg": "这是一条消息示例，通常用于向访问者或用户提供重要信息。 请单击旁边的按钮以关闭此消息。",
-  "saas-landing": {
-    "header_login": "登录",
-    "header_register": "注册",
-    "header_language": "语言",
-    "header_theme": "主题模式",
-    "header_dark": "暗",
-    "header_light": "光",
-    "header_feature": "功能",
-    "header_testimonials": "推荐书",
-    "header_pricing": "定价和计划",
-    "header_faq": "常见问题",
-    "header_contact": "联系人",
-    "banner_title": "公司应有的成就",
-    "banner_titlestrong": "惊人的软件",
-    "banner_subtitle": "数百万名满意的用户使用我们的集成应用程序可以更好地工作。",
-    "banner_watchvideo": "观看视频",
-    "a_getstarted": "开始",
-    "counter_month": "月份",
-    "counter_free": "免费试用",
-    "counter_users": "活动用户",
-    "counter_providers": "提供者",
-    "feature_title1": "全力以赴",
-    "feature_titlestrong1": "在一个仪表板中",
-    "feature_desc1": "我们的受众群体信息中心向您显示了预先构建的细分，例如热门地区，近期增长来源，甚至客户生命周期价值（CLV）。",
-    "see_detail": "查看详细信息",
-    "feature_title2": "您所需要的只是一个",
-    "feature_titlestrong2": "独特的价值主张",
-    "feature_desc2": "凭借强大的技术基础，使我们能够利用业务专家来进行数百项改进。",
-    "feature_title3": "加速发展为智能",
-    "feature_titlestrong3": "企业",
-    "feature_desc3": "我们使您的营销，销售和服务团队能够在整个客户生命周期中进行协作，以提供更有意义，更难忘的体验。",
-    "testi_title": "我们的客户是什么",
-    "testi_titlestrong": "推荐",
-    "pricing_title": "定价和计划",
-    "pricing_subtitle": "为您的工作场所设计的最佳价值，每用户每月$ 24起。",
-    "faq_subtitle": "有疑问吗？请查看我们的常见问题以找到答案。",
-    "caption_news": "新闻",
-    "caption_event": "事件",
-    "news_readmore": "阅读更多",
-    "footer_waiting": "您还在等什么?"
-  }
+  "notif_msg": "We use cookies to make our site work. With your consent, we use cookies to improve user experience and analyze website traffic. By clicking “Accept”, you agree to our website's use of cookies.",
+  "header_language": "language",
+  "header_theme": "Theme mode",
+  "header_dark": "dark",
+  "header_light": "light",
+  "header_feature": "features",
+  "header_testimonials": "testimonials",
+  "header_pricing": "pricing",
+  "header_faq": "faq",
+  "header_contact": "contact",
+  "banner_title": "Build AAC boards with the power of AI",
+  "banner_titlestrong": "",
+  "banner_subtitle": "Designed for therapists, educators, and caregivers. Generate personalized augmentative communication boards instantly with Cboard AI Builder.",
+  "banner_watchvideo": "Watch Video",
+  "getstarted": "Get Started",
+  "counter_credits": "Credits",
+  "counter_free": "Free Trial",
+  "counter_users": "AAC Symbols",
+  "counter_providers": "Languages",
+  "counter_transactions": "Transactions",
+  "feature_title1": "Instant Core Vocabulary Boards",
+  "feature_titlestrong1": "with AI",
+  "feature_desc1": "Quickly generate AAC core boards using essential, high-frequency vocabulary tailored to each user’s needs. Save time and support more effective communication from the start.",
+  "see_detail": "See Detail",
+  "feature_title2": "AI-Generated Pictograms",
+  "feature_titlestrong2": "for Every Concept",
+  "feature_desc2": "Missing a symbol? No problem. Our AI creates custom pictograms when existing images aren’t available, ensuring full visual support for every word or phrase.",
+  "feature_title3": "Export Directly to the",
+  "feature_titlestrong3": "Cboard App",
+  "feature_desc3": "Move from board creation to communication in one click. Instantly export your custom AAC boards to the Cboard application with full compatibility and no extra setup.",
+  "testi_title": "Testimonials from Our Users",
+  "testi_titlestrong": "",
+  "testi1": "This tool has completely changed how I build AAC boards. What used to take me hours now takes minutes—and the results are even more personalized.",
+  "testi1Name": "Dr. Elena Ruiz",
+  "testi1Title": "Speech-Language Pathologist, Children's Rehab Center",
+  "testi2": "The AI-generated pictograms are a game changer. No more workarounds or missing images—we always have exactly what we need.",
+  "testi2Name": "Mark Jensen",
+  "testi2Title": "Assistive Technology Specialist, Oak Valley School District",
+  "testi3": "As a special educator, I create multiple boards a week. Cboard AI Builder has cut my prep time in half without sacrificing quality.",
+  "testi3Name": "Lisa Chen",
+  "testi3Title": "Special Education Teacher, Maple Grove Elementary",
+  "testi4": "I love the integration with the Cboard app—it’s seamless. I can create and deploy boards in one smooth workflow.",
+  "testi4Name": "Carlos Alvarez",
+  "testi4Title": "Speech Therapist, Inclusive Voices Clinic",
+  "testi5": "Finally, an AAC tool that puts powerful AI into the hands of educators and therapists. It’s intuitive, efficient, and deeply thoughtful.",
+  "testi5Name": "Angela Thompson",
+  "testi5Title": "Director of Assistive Communication, Bright Horizons Foundation",
+  "testi6": "Being able to generate core vocabulary boards so quickly has made a huge impact on my caseload. It’s a brilliant tool.",
+  "testi6Name": "Priya Menon",
+  "testi6Title": "SLP, Early Intervention Services",
+  "testi7": "The user experience is amazing—simple enough for anyone to use, but powerful under the hood. A true innovation in AAC tech.",
+  "testi7Name": "Jordan Lee",
+  "testi7Title": "EdTech Consultant and AAC Advocate",
+  "testi8": "I work in low-resource settings, and this AI tool helps me provide high-quality AAC boards without needing a big team or budget.",
+  "testi8Name": "Nadia García",
+  "testi8Title": "Special Needs Educator, Fundación Conectar",
+  "testi9": "Custom pictogram creation has opened up new possibilities for children with rare conditions or very specific vocabulary needs.",
+  "testi9Name": "Benjamin Walker",
+  "testi9Title": "Speech Pathologist, Neurodiversity Center",
+  "testi10": "The speed and flexibility of this tool are unmatched. I now recommend it to every therapist I train.",
+  "testi10Name": "Dr. Isabelle Fournier",
+  "testi10Title": "AAC Trainer & Clinical Supervisor, VoicePath Institute",
+  "pricing_title": "Pricing Plans",
+  "pricing_subtitle": "The best value designed for your workplace, starting at just $10/user/month.",
+  "pricing_free_title": "Free Trial",
+  "pricing_free_desc": "Try Cbuilder with no commitment",
+  "pricing_free_feature1": "40 credits included (≈4 boards)",
+  "pricing_free_feature2": "AI Core Vocabulary Boards",
+  "pricing_free_feature3": "AI-Generated Pictograms",
+  "pricing_free_feature4": "Manual Export of Boards",
+  "pricing_free_feature5": "No Credit Card Required",
+  "pricing_basic_title": "Basic",
+  "pricing_basic_desc": "For individuals getting started",
+  "pricing_basic_feature1": "150 monthly credits (≈15 boards)",
+  "pricing_basic_feature2": "AI Core Vocabulary Boards",
+  "pricing_basic_feature3": "AI-Generated Pictograms",
+  "pricing_basic_feature4": "Manual Export of Boards",
+  "pricing_basic_feature5": "Email Support",
+  "pricing_standard_title": "Standard + Cboard",
+  "pricing_standard_desc": "For professionals who need integration and support",
+  "pricing_standard_feature1": "300 monthly credits (≈30 boards)",
+  "pricing_standard_feature2": "Premium Cboard App Access ($8 value)",
+  "pricing_standard_feature3": "All Basic Features",
+  "pricing_standard_feature4": "Seamless Export to Cboard",
+  "pricing_standard_feature5": "Priority Support",
+  "pricing_pro_title": "Pro + Cboard",
+  "pricing_pro_desc": "For high-volume users and teams",
+  "pricing_pro_feature1": "600 monthly credits (≈60 boards)",
+  "pricing_pro_feature2": "All Standard Features",
+  "pricing_pro_feature3": "Team Collaboration Tools",
+  "pricing_pro_feature4": "Early Access to New Features",
+  "pricing_pro_feature5": "Discounted Extra Credits",
+  "faq_subtitle": "Have a question? Check out our frequently asked questions to find your answer.",
+  "faq_question_01": "What is Cbuilder and how does it work?",
+  "faq_answer_01": "Cbuilder is an AI-powered tool that helps create AAC communication boards. You simply input the board’s dimensions and describe its purpose, and the tool generates relevant vocabulary and pictograms using advanced language and image models.",
+  "faq_question_02": "How many credits does it take to create a board?",
+  "faq_answer_02": "Each board typically consumes around 10 credits. Your monthly plan includes a specific number of credits, and you can purchase additional credits if needed.",
+  "faq_question_03": "What happens if a pictogram doesn’t exist in the database?",
+  "faq_answer_03": "No problem—Cbuilder uses AI to generate custom pictograms when no suitable image is found in the existing database, so you’ll never be left without a visual symbol.",
+  "faq_question_04": "Can I export boards to the Cboard app?",
+  "faq_answer_04": "Yes! If you're on the Standard or Pro plan, you can seamlessly export your boards directly into the premium version of the Cboard application for immediate use.",
+  "faq_question_05": "Is there a free trial available?",
+  "faq_answer_05": "Yes, we offer a free trial that gives you 40 credits—enough to create 4 full boards. No credit card required to get started.",
+  "caption_news": "news",
+  "caption_event": "event",
+  "news_readmore": "read more",
+  "footer_waiting": "What are you waiting for?",
+  "title_home": "Home",
+  "title_blog": "Blog",
+  "title_contact": "Contact",
+  "title_history": "History",
+  "title_privacy": "Privacy Policy",
+  "title_locations": "Locations",
+  "title_team": "Team",
+  "title_pricing": "Pricing",
+  "title_terms": "Terms of Service",
+  "title_faq": "FAQ",
+  "title_help": "Help",
+  "footer_company": "Company",
+  "footer_resources": "Resources",
+  "footer_legal": "Legal"
 }
